k8s/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ltc
  namespace: ltc
spec:
  template:
    spec:
      containers:
        - name: ltc
