k8s/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ltc
  namespace: ltc
spec:
  rules:
    - host: ltc.ssalcloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ltc
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ltc
                port:
                  number: 3000
